# cardpulse

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  fly.toml
.claude/: settings.json
.claude/rules/: docker-rules.md  documentation-rules.md  github-rules.md  migration-rules.md  rust-rules.md  testing-rules.md
.claude/skills/tdd/: SKILL.md
.github/workflows/: ci.yml
dashboard/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
dashboard/public/: manifest.json  sw.js
dashboard/src/: App.tsx  index.css  main.tsx
ios/: README.md
ios/scriptable/: CardPulse.js
migrations/: 001_initial.sql  002_test_blobs.sql  003_add_user_config.sql
scripts/: fly-setup.sh
src/: config.rs  db.rs  error.rs  lib.rs  main.rs  router.rs  state.rs  validation.rs
src/auth/: handler.rs  jwt.rs  middleware.rs  mod.rs  password.rs
src/handlers/: cards.rs  health.rs  me.rs  mod.rs  sync.rs  test_blob.rs  transactions.rs  user_config.rs
src/middleware/: mod.rs  rate_limit.rs
src/models/: card.rs  mod.rs  transaction.rs  user.rs  user_config.rs
src/repositories/: card_repo.rs  mod.rs  traits.rs  transaction_repo.rs  user_config_repo.rs  user_repo.rs
src/sms/: bradesco.rs  chain.rs  itau.rs  mod.rs  nubank.rs  parser.rs
tests/: auth_middleware_test.rs  auth_refresh_test.rs  auth_test.rs  cards_test.rs  cors_test.rs  db_test.rs  health_test.rs  rate_limit_test.rs  sync_test.rs  test_blob_test.rs  test_helpers_test.rs  transactions_test.rs  user_config_test.rs
tests/common/: mod.rs
(+54 files in other folders)
