[package]
name = "cardpulse-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth
jsonwebtoken = "9"
argon2 = "0.5"

# Crypto
aes-gcm = "0.10"

# Error handling
thiserror = "1"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Config
dotenvy = "0.15"

# Encoding
base64 = "0.22"

# HTTP middleware
tower-http = { version = "0.5", features = ["cors", "trace"] }
tower = "0.5"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
axum-test = "15"


